# bmi-example-c

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: conda-and-cmake.yml  test.yml
heat/: CMakeLists.txt  bmi.c  bmi.h  bmi_heat.c  bmi_heat.h  bmi_main.c  bmiheatc.pc.cmake  bmilib.h  heat.c  heat.h  heatc.pc.cmake  main.c
testing/: CMakeLists.txt  config.txt  test_conflicting_instances.c  test_get_value.c  test_grid_info.c  test_initialize_from_file.c  test_irf.c  test_print_var_names.c  test_reinitialize.c  test_set_value.c
